opam-version: "1.2"
name: "toy-crypto"
version: "0.6.1"
maintainer: "Guillaume Huysmans <ghuysmans99@gmail.com>"
authors: "Guillaume Huysmans <ghuysmans99@gmail.com>"
homepage: "https://github.com/ghuysmans/toy-crypto/"
bug-reports: "https://github.com/ghuysmans/toy-crypto/issues"
dev-repo: "https://github.com/ghuysmans/toy-crypto/"
build: [["dune" "build" "-p" name "-j" jobs]]
depends: [
  "dune" {build}
  "base-num"
  "ppx_deriving_yojson"
  "cmdliner"
]
